k8s/bes/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: media
spec:
  selector:
    app: paperless
  ports:
    - port: 28981
      targetPort: 8000
