k8s/bes/paperless/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless
  namespace: media
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`paperless.sw1a1aa.uk`)
      kind: Rule
      services:
        - name: paperless
          port: 28981
  tls:
    certResolver: letsencrypt
